# speet

./: .gitmodules  AGENTS.md  COPYING.md  Cargo.toml  PAGING.md  README.md  debug_instr.rs  goals.md
crates/: RECOMPILER_INTEGRATION.md
crates/arch/speet-dex/: Cargo.toml
crates/arch/speet-dex/src/: lib.rs
crates/arch/speet-memory/: Cargo.toml
crates/arch/speet-memory/src/: layout.rs  lib.rs  mapper.rs  mem.rs  paging.rs
crates/arch/speet-mips/: Cargo.toml
crates/arch/speet-mips/src/: lib.rs
crates/arch/speet-mips/tests/: mips64_load_store.rs  simple_tests.rs
crates/arch/speet-ordering/: Cargo.toml
crates/arch/speet-ordering/src/: lib.rs
crates/arch/speet-riscv/: Cargo.toml
crates/arch/speet-riscv/examples/: hint_tracking_demo.rs
crates/arch/speet-riscv/src/: direct.rs  lib.rs
crates/arch/speet-riscv/tests/: rv_corpus_tests.rs
crates/arch/speet-traps/src/: context.rs  jump.rs
crates/arch/speet-wasm-helpers/: Cargo.toml
crates/arch/speet-x86_64/: Cargo.toml
crates/arch/speet-x86_64/src/: direct.rs  lib.rs
crates/arch/speet-x86_64/tests/: control_flow_tests.rs  x86_corpus_tests.rs
crates/arch/yecta/src/: lib.rs
crates/arch/yecta/tests/: reactor_tests.rs
crates/helper/speet-interp/: Cargo.toml
crates/helper/speet-interp/src/: builder.rs  context.rs  lib.rs
crates/helper/speet-memory/: Cargo.toml
crates/helper/speet-memory/src/: layout.rs  lib.rs  mapper.rs  mem.rs  paging.rs  virtual.rs
crates/helper/speet-ordering/: Cargo.toml
crates/helper/speet-ordering/src/: lib.rs
crates/helper/speet-reach/: Cargo.toml
crates/helper/speet-reach/src/: compute.rs  edges.rs  filter.rs  lib.rs  pc_slot_map.rs  spec.rs
crates/helper/speet-traps/: Cargo.toml
crates/helper/speet-traps/src/: cond.rs  config.rs  context.rs  hardening.rs  impls.rs  insn.rs  jump.rs  layout.rs  lib.rs  locals.rs  security.rs  tracing.rs
crates/helper/wasm-layout/: Cargo.toml
crates/helper/wasm-layout/src/: lib.rs
crates/helper/yecta/: Cargo.toml  SPECULATIVE_CALLS.md
crates/helper/yecta/src/: layout.rs  lib.rs  slots.rs
crates/helper/yecta/tests/: reactor_tests.rs
crates/managed/dex-bytecode/: Cargo.toml
crates/managed/dex-bytecode/src/: lib.rs
crates/managed/speet-dex/: Cargo.toml
crates/managed/speet-dex/src/: lib.rs
crates/managed/speet-object/: Cargo.toml
crates/managed/speet-object/src/: hash.rs  lib.rs  linear.rs  model.rs
crates/managed/speet-wasm/: Cargo.toml
crates/managed/speet-wasm/src/: lib.rs
crates/native/speet-mips/: Cargo.toml
crates/native/speet-mips/examples/: basic_demo.rs
crates/native/speet-mips/src/: cfg.rs  lib.rs
crates/native/speet-mips/tests/: basic_tests.rs  load_store_variants.rs  mips64_load_store.rs  mips_corpus_tests.rs  simple_tests.rs
crates/native/speet-powerpc/: Cargo.toml
crates/native/speet-powerpc/src/: lib.rs
crates/native/speet-riscv/: Cargo.toml
crates/native/speet-riscv/examples/: hint_tracking_demo.rs
crates/native/speet-riscv/src/: cfg.rs  lib.rs  (+2 more)
crates/native/speet-x86_64/: Cargo.toml
crates/native/speet-x86_64/src/: cfg.rs  direct.rs  lib.rs
crates/native/speet-x86_64/tests/: call_ret_tests.rs  control_flow_tests.rs  flags_tests.rs  memory_destination_tests.rs  push_pop_tests.rs  speculative_calls_tests.rs  x86_corpus_tests.rs
crates/os/osctx/: Cargo.toml
crates/os/speet-link/: Cargo.toml
crates/os/speet-link-core/: Cargo.toml
crates/os/speet-link/src/: builder.rs  context.rs  lib.rs  linker.rs  recompiler.rs  schedule.rs  shim.rs  tests.rs  unit.rs
crates/os/speet-linker/: Cargo.toml
crates/os/speet-linker/src/: lib.rs  tests.rs
crates/os/speet-module-builder/: Cargo.toml
crates/os/speet-module-builder/src/: lib.rs
crates/os/speet-module-target/: Cargo.toml
crates/os/speet-schedule/: Cargo.toml
crates/speet-mips/examples/: basic_demo.rs
crates/speet-mips/src/: lib.rs
crates/speet-mips/tests/: basic_tests.rs  load_store_variants.rs  mips64_load_store.rs  simple_tests.rs
crates/speet-powerpc/: Cargo.toml
crates/speet-powerpc/tests/: basic_tests.rs
crates/speet-riscv/: Cargo.toml  PAGING.md  README.md
crates/speet-riscv/examples/: hint_tracking_demo.rs
crates/speet-riscv/src/: direct.rs  lib.rs
crates/speet-riscv/tests/: hint_tracking_test.rs  rv_corpus_tests.rs
crates/speet-wasm-helpers/src/: lib.rs
crates/speet-x86_64/: Cargo.toml  PAGING.md
crates/speet-x86_64/src/: direct.rs  lib.rs
crates/speet-x86_64/tests/: call_ret_tests.rs  control_flow_tests.rs  flags_tests.rs  memory_destination_tests.rs  push_pop_tests.rs  speculative_calls_tests.rs
crates/test/speet-e2e/: Cargo.toml  build.rs  generate_tests.py
crates/test/speet-e2e/src/: lib.rs
crates/test/speet-e2e/tests/: condition_trap_tests.rs  e2e.rs  riscv_e2e.rs
crates/test/speet-e2e/tests/harness/: mod.rs
crates/yecta/: Cargo.toml  README.md  SPECULATIVE_CALLS.md
crates/yecta/src/: feed.rs  lib.rs  opts.rs  pin.rs
crates/yecta/tests/: reactor_tests.rs
docs/: container-plan.md  entity-index-space.md  func-signature.md  lazy-store-alias-checking.md  parallel-api-migration.md  reactor-context-split.md  recompile-goal-list.md  recompiler-guide.md  trap-hooks.md
docs/recompiler-container-plan/: 01-overview.md  02-architecture.md  03-vkernel.md  04-wasm-appending.md  04-wasm-megabinary.md  05-recompilation.md  06-polyfills.md  07-no-jit-policy.md  08-pipeline.md  09-runtime-integration.md  10-testing.md  11-migration.md  12-threat-model.md  13-roadmap.md  14-formats.md  15-implementation-notes.md  README.md
test-data/mips-corpus/: 01_integer_computational.elf  01_integer_computational.s  02_control_transfer.elf  02_control_transfer.s  03_load_store.elf  03_load_store.s  04_multiply_divide.elf  04_multiply_divide.s  05_edge_cases.elf  05_edge_cases.s  compile_corpus.sh
test-data/x86_64-corpus/: 01_integer_computational.elf  01_integer_computational.s  02_control_transfer.elf  02_control_transfer.s  03_load_store.elf  03_load_store.s  04_flags_and_setcc.elf  04_flags_and_setcc.s  05_edge_cases.elf  05_edge_cases.s  compile_corpus.sh
tests/: integration_test.rs
(+15 files in other folders)
