[workspace]
members = [
    # Helper crates (yecta reactor + architecture-agnostic building blocks)
    "crates/helper/yecta",
    "crates/helper/speet-memory",
    "crates/helper/speet-ordering",
    "crates/helper/speet-traps",
    "crates/helper/speet-wasm-helpers",
    # Native architecture crates
    "crates/native/speet-x86_64",
    "crates/native/speet-riscv",
    "crates/native/speet-mips",
    "crates/native/speet-powerpc",
    # Managed architecture crates
    "crates/managed/speet-dex",
    "crates/managed/dex-bytecode",
    "crates/managed/speet-object",
    "crates/managed/speet-wasm",
    "crates/os/osctx",
    "crates/os/speet-link",
]
resolver = "3"

[workspace.package]
description = "Fast static recompiler"
license-file = "COPYING.md"

[workspace.dependencies]
speet-link = { path = "crates/os/speet-link" }
wasmparser = { version = "0.240.0", default-features = false }
wasm-encoder = { version = "0.240.0", default-features = false, features = [
    "wasmparser",
] }

wax-core = { version = "0.1.0", git = "https://github.com/portal-co/wax.git", branch = "main" }

portal-solutions-asm-semantics = { version = "0.1.0", git = "https://github.com/portal-co/asm-arch.git" }
asim-core = { version = "0.1.0", git = "https://github.com/portal-co/asim.git", branch = "main" }

portal-pc-asm-common = { version = "0.1.1", git = "https://github.com/portal-co/asm-common.git" }
portal-solutions-asm-x86-64 = { version = "0.1.0", git = "https://github.com/portal-co/asm-arch.git" }
rv-asm = { version = "*", git = "https://github.com/portal-co/rv-utils.git" }
rabbitizer = "1.14.3"
powerpc = "0.4.1"
disarm64 = "0.1.25"
dex = {git="https://github.com/letmutx/dex-parser.git"}
# Standalone DEX bytecode parser (extractable)
