[workspace]
members = [
    # Helper crates (yecta reactor + architecture-agnostic building blocks)
    "crates/helper/wasm-layout",
    "crates/helper/yecta",
    "crates/helper/speet-memory",
    "crates/helper/speet-ordering",
    "crates/helper/speet-traps",
    "crates/helper/speet-wasm-helpers",
    "crates/helper/speet-reach",
    "crates/helper/speet-interp",
    # Native architecture crates
    "crates/native/speet-x86_64",
    "crates/native/speet-riscv",
    "crates/native/speet-mips",
    "crates/native/speet-powerpc",
    # Managed architecture crates
    "crates/managed/speet-dex",
    "crates/managed/dex-bytecode",
    "crates/managed/speet-object",
    "crates/managed/speet-wasm",
    "crates/os/osctx",
    "crates/os/speet-link-core",
    "crates/os/speet-linker",
    "crates/os/speet-schedule",
    "crates/os/speet-module-target",
    "crates/os/speet-module-builder",
    # End-to-end integration tests
    "crates/test/speet-e2e",
]
resolver = "3"

[workspace.package]
description = "Fast static recompiler"
license-file = "COPYING.md"

[workspace.dependencies]
wasm-layout = { path = "crates/helper/wasm-layout" }
speet-reach = { path = "crates/helper/speet-reach" }
speet-link-core     = { path = "crates/os/speet-link-core" }
speet-linker        = { path = "crates/os/speet-linker" }
speet-schedule      = { path = "crates/os/speet-schedule" }
speet-module-target = { path = "crates/os/speet-module-target" }
wasmparser = { version = "0.240.0", default-features = false }
wasm-encoder = { version = "0.240.0", default-features = false, features = [
    "wasmparser",
] }

wax-core = { version = "0.1.0", git = "https://github.com/portal-co/wax.git", branch = "main" }

portal-solutions-asm-semantics = { version = "0.1.0", git = "https://github.com/portal-co/asm-arch.git" }
asim-core = { version = "0.1.0", git = "https://github.com/portal-co/asim.git", branch = "main" }

portal-pc-asm-common = { version = "0.1.1", git = "https://github.com/portal-co/asm-common.git" }
portal-solutions-asm-x86-64 = { version = "0.1.0", git = "https://github.com/portal-co/asm-arch.git" }
rv-asm = { version = "*", git = "https://github.com/portal-co/rv-utils.git" }
rabbitizer = "1.14.3"
powerpc = "0.4.1"
disarm64 = "0.1.25"
spin = "0.10.0"
dex = {git="https://github.com/letmutx/dex-parser.git"}
# Standalone DEX bytecode parser (extractable)
