[package]
name = "speet-dex"
version = "0.1.0"
edition = "2024"
description.workspace = true
license-file.workspace = true


[dependencies]
wasm-encoder.workspace = true
yecta = {path = "../yecta"}
dex.workspace = true
wax-core.workspace = true
speet-wasm-helpers = {path = "../speet-wasm-helpers"}
speet-memory = {path = "../speet-memory"}
speet-ordering = {path = "../speet-ordering"}
speet-traps = {path = "../speet-traps"}