[package]
name = "speet-mips"
version = "0.1.0"
edition = "2024"
description.workspace = true
license-file.workspace = true

[dependencies]
wasm-encoder.workspace = true
yecta = {path = "../yecta"}
rabbitizer.workspace = true
wax-core.workspace = true
speet-memory = {path = "../speet-memory"}
speet-ordering = {path = "../speet-ordering"}

[dev-dependencies]
object = "0.36"