[package]
name = "speet-riscv"
version = "0.1.0"
edition = "2024"
description.workspace = true
license-file.workspace = true


[dependencies]
wasm-encoder.workspace = true
yecta = {path = "../yecta"}
rv-asm.workspace = true
wax-core.workspace = true
speet-wasm-helpers = {path = "../speet-wasm-helpers"}

[dev-dependencies]
object = "0.36"