[package]
name = "speet-interp"
version = "0.1.0"
edition = "2024"
description.workspace = true
license-file.workspace = true

[dependencies]
wasm-encoder.workspace = true
wax-core.workspace = true
yecta = { path = "../yecta" }
speet-link-core = { path = "../../os/speet-link-core" }
speet-memory = { path = "../speet-memory" }
speet-ordering = { path = "../speet-ordering" }
speet-traps = { path = "../speet-traps" }
