[package]
name = "speet-dex"
version = "0.1.0"
edition = "2024"
description.workspace = true
license-file.workspace = true


[dependencies]
wasm-encoder.workspace = true
yecta = {path = "../../helper/yecta"}
dex.workspace = true
wax-core.workspace = true
speet-wasm-helpers = {path = "../../helper/speet-wasm-helpers"}
speet-memory = {path = "../../helper/speet-memory"}
speet-ordering = {path = "../../helper/speet-ordering"}
speet-traps = {path = "../../helper/speet-traps"}
dex-bytecode = {path = "../dex-bytecode"}
speet-object = {path = "../speet-object"}
speet-link-core = {path = "../../os/speet-link-core"}