[package]
name = "speet-x86_64"
version = "0.1.0"
edition = "2021"
license-file = "../../COPYING.md"
description = "x86_64 to WebAssembly recompiler (basic integer ops)"

[dependencies]
iced-x86 = "1.18.0"
wasm-encoder = { workspace = true }
yecta = { path = "../../helper/yecta" }
wax-core = { workspace = true }
speet-memory = { path = "../../helper/speet-memory" }
speet-ordering = { path = "../../helper/speet-ordering" }
speet-traps = { path = "../../helper/speet-traps" }
speet-reach = { path = "../../helper/speet-reach" }
speet-link-core = { path = "../../os/speet-link-core" }

[dev-dependencies]
object = "0.36"
yecta = { path = "../../helper/yecta" }
speet-link-core = { path = "../../os/speet-link-core" }
wasm-encoder = { workspace = true }

[features]
default = []
