[package]
name = "speet-module-builder"
version = "0.1.0"
edition = "2024"
description.workspace = true
license-file.workspace = true

[dependencies]
speet-module-target = { path = "../speet-module-target" }
speet-link          = { path = "../speet-link" }
wasm-encoder        = { workspace = true }

[dev-dependencies]
wasmparser = { version = "0.240.0", features = ["validate"] }
